tests/should_fail/missing_return_type.jou
def foo():  # Error: return type must be specified with '->', or with '-> void' if the function doesn't return anything
    return
